tests/unknown-byte/out.txt
error: unknown byte: 0xe7
  ┌─ err.sml:1:5
  │
1 │ val 空条承太郎 = 1
  │     ^^

lexing failed
